--- a/src/Home/Section4.css
+++ b/src/Home/Section4.css
@@ -1,8 +1,16 @@
 .section-4 {
   margin-top: 5.9rem;
   margin-bottom: 20rem;
-  padding: 0rem 14rem 0rem 5rem;
+  /* padding: 0rem 14rem 0rem 5rem; */
 }
 
 .text-box__btn {
+}
+
+.container__img-box {
+  align-self: center;
+}
+
+.grid-section {
+  grid-template-columns: 1fr 2fr;
 }
